# regulatory-arbitrage-system

./: README.md  pyproject.toml  requirements.txt
reg_gap/: __init__.py  cli.py
reg_gap/comparison/: __init__.py  ambiguity.py  jurisdictional.py  semantic_diff.py
reg_gap/ingestion/: __init__.py  loaders.py  normalizer.py
reg_gap/parsing/: __init__.py  clause_extractor.py  definitions.py  entity_recognizer.py
reg_gap/reports/: __init__.py  summaries.py  visualizations.py
reg_gap/risk/: __init__.py  confidence_bounds.py  enforcement_model.py  severity.py
reg_gap/tests/: __init__.py  test_ambiguity.py  test_clause_extractor.py  test_synthetic.py
regulatory_gap_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
